[package]
name = "rust-preq"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5.7"
bs58 = "0.5.1"
solana-client = "1.16.0"
solana-program = "1.16.0"
solana-sdk = "1.16.0"

# Use a forked or updated version of solana-idlgen that resolves the conflict
solana-idlgen = { git = "https://github.com/deanmlittle/solana-idlgen.git" }


[[bin]]
name = "rust-preq"
path = "src/lib.rs"
